--- a/index.html
+++ b/index.html
@@ -1,147 +1,91 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Your Name – Creative Designer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Your Name</h1>
+      <p class="tagline">Creative Designer • Branding / UI / Illustration</p>
+      <p class="intro">
+        I design thoughtful, visually-driven experiences that help brands tell their story.
+      </p>
+      <div class="hero-links">
+        <a href="#work">View selected work ↓</a>
+        <a href="mailto:youremail@email.com">Contact me</a>
+      </div>
+    </div>
+  </header>
 
-body {
-  margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  background: #050608;
-  color: #f5f5f5;
-  line-height: 1.6;
-}
+  <main>
+    <section id="work" class="section">
+      <h2>Selected Work</h2>
+      <div class="grid">
+        <article class="project">
+          <h3>Project Title 01</h3>
+          <p>Short 1–2 sentence description of the project, client, and your role.</p>
+          <p class="tags">Branding • Visual Design</p>
+        </article>
+        <article class="project">
+          <h3>Project Title 02</h3>
+          <p>Short 1–2 sentence description of the project, client, and your role.</p>
+          <p class="tags">UI Design • Web</p>
+        </article>
+        <article class="project">
+          <h3>Project Title 03</h3>
+          <p>Short 1–2 sentence description of the project, client, and your role.</p>
+          <p class="tags">Packaging • Illustration</p>
+        </article>
+      </div>
+    </section>
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+    <section id="about" class="section">
+      <h2>About</h2>
+      <p>
+        I’m a creative designer focused on [branding / digital / product]. I enjoy turning ideas
+        into clean, thoughtful visuals that feel both intentional and human.
+      </p>
+      <p>
+        I’ve worked on [freelance / in-house / agency] projects for [types of clients or industries].
+      </p>
+    </section>
 
-a:hover {
-  text-decoration: underline;
-}
+    <section id="skills" class="section">
+      <h2>Skills & Tools</h2>
+      <ul class="pill-list">
+        <li>Brand Identity</li>
+        <li>UI Design</li>
+        <li>Social Media Graphics</li>
+        <li>Presentation Design</li>
+        <li>Figma</li>
+        <li>Adobe Photoshop</li>
+        <li>Adobe Illustrator</li>
+        <li>Canva</li>
+      </ul>
+    </section>
 
-/* Hero */
-.hero {
-  min-height: 60vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 4rem 1.5rem 2rem;
-  background: radial-gradient(circle at top, #262b46, #050608 55%);
-}
+    <section id="contact" class="section">
+      <h2>Let’s work together</h2>
+      <p>Reach out for collaborations, freelance work, or just to say hi.</p>
+      <ul class="links-list">
+        <li><a href="mailto:youremail@email.com">youremail@email.com</a></li>
+        <li><a href="https://www.behance.net/" target="_blank">Behance</a></li>
+        <li><a href="https://dribbble.com/" target="_blank">Dribbble</a></li>
+        <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+      </ul>
+    </section>
+  </main>
 
-.hero-content {
-  max-width: 720px;
-  text-align: center;
-}
+  <footer class="footer">
+    <p>© <span id="year"></span> Your Name. All rights reserved.</p>
+  </footer>
 
-.hero h1 {
-  font-size: clamp(2.5rem, 5vw, 3.5rem);
-  margin-bottom: 0.25rem;
-}
-
-.tagline {
-  opacity: 0.85;
-  font-size: 0.95rem;
-  text-transform: uppercase;
-  letter-spacing: 0.08em;
-  margin-bottom: 1rem;
-}
-
-.intro {
-  max-width: 520px;
-  margin: 0 auto 1.5rem;
-  opacity: 0.9;
-}
-
-.hero-links {
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.hero-links a {
-  padding: 0.7rem 1.2rem;
-  border-radius: 999px;
-  border: 1px solid rgba(245, 245, 245, 0.25);
-  font-size: 0.9rem;
-}
-
-/* Sections */
-.section {
-  padding: 3rem 1.5rem;
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-.section h2 {
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-/* Work grid */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 1.5rem;
-}
-
-.project {
-  padding: 1.2rem 1.2rem 1rem;
-  border-radius: 1rem;
-  background: rgba(255, 255, 255, 0.03);
-  border: 1px solid rgba(255, 255, 255, 0.05);
-}
-
-.project h3 {
-  margin-top: 0;
-  margin-bottom: 0.3rem;
-}
-
-.project p {
-  margin: 0.2rem 0;
-}
-
-.tags {
-  font-size: 0.8rem;
-  opacity: 0.8;
-}
-
-/* Pills */
-.pill-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.6rem;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.pill-list li {
-  padding: 0.4rem 0.8rem;
-  border-radius: 999px;
-  background: rgba(255, 255, 255, 0.05);
-  font-size: 0.85rem;
-}
-
-/* Links list */
-.links-list {
-  list-style: none;
-  padding: 0;
-  margin: 0.5rem 0 0;
-}
-
-.links-list li {
-  margin: 0.2rem 0;
-}
-
-/* Footer */
-.footer {
-  padding: 1.5rem;
-  text-align: center;
-  font-size: 0.8rem;
-  opacity: 0.7;
-  border-top: 1px solid rgba(255, 255, 255, 0.08);
-}
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
