--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Name – Creative Designer</title>
+  <title>Julia Alix – Creative Designer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
 
-  <!-- Top Navigation (Optional – matches Blush style) -->
+  <!-- Top Navigation -->
   <header class="site-header">
     <div class="container header-inner">
       <div class="logo">
         <span class="logo-mark"></span>
-        <span class="logo-text">Your Name</span>
+        <span class="logo-text">Julia Alix</span>
       </div>
 
       <nav class="nav">
@@ -25,7 +25,7 @@
     </div>
   </header>
 
-  <!-- Hero Section (Blush-inspired) -->
+  <!-- Hero Section with your avatar -->
   <section class="hero">
     <div class="container hero-inner">
 
@@ -34,11 +34,11 @@
         <p class="eyebrow">Creative Designer</p>
 
         <h1>
-          I design clean, thoughtful visuals for brands & digital products.
+          I design bright, playful visuals for brands and digital products.
         </h1>
 
         <p class="hero-subtitle">
-          Specializing in <strong>UI design, mobile interfaces, branding,</strong> and playful visuals.
+          Blending <strong>UI design, illustration, and branding</strong> to create fun, friendly, and intentional experiences.
         </p>
 
         <div class="hero-links">
@@ -47,17 +47,12 @@
         </div>
       </div>
 
-      <!-- Right Side: Visual Placeholder (You will add Figma screenshots here later) -->
+      <!-- Right Side: Your avatar image -->
       <div class="hero-visual">
-        <p style="
-          margin: 0;
-          font-size: 0.9rem;
-          color: #6e628b;
-          text-align: center;
-        ">
-          Add your Figma homepage or mobile design preview here ✨<br>
-          (just replace this with an <img> later)
-        </p>
+        <img
+          src="Avatar_Juju.png"
+          alt="Avatar illustration of Julia Alix sitting on a moon, waving while using a laptop."
+        />
       </div>
 
     </div>
@@ -97,10 +92,10 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        I’m a designer who loves creating modern, clean, and playful visual experiences.
+        Hi! I’m Julia Alix — a creative designer who loves crafting bright, characterful visuals and soft, friendly interfaces.
       </p>
       <p>
-        My work blends creativity and structure — balancing aesthetic design with user-centered thinking.
+        My work combines illustration, UI design, and clean branding to help products feel more human and joyful.
       </p>
     </div>
   </section>
@@ -109,7 +104,7 @@
   <section id="contact" class="section">
     <div class="container">
       <h2>Let’s work together</h2>
-      <p>Open to freelance projects, collaborations, or full-time opportunities.</p>
+      <p>Open to freelance projects, collaborations, and full-time design opportunities.</p>
 
       <ul class="links-list">
         <li><a href="mailto:youremail@email.com">youremail@email.com</a></li>
@@ -122,7 +117,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>© <span id="year"></span> Your Name. All rights reserved.</p>
+    <p>© <span id="year"></span> Julia Alix. All rights reserved.</p>
   </footer>
 
   <script>
