--- a/index.html
+++ b/index.html
@@ -26,37 +26,40 @@
   </header>
 
   <!-- Hero Section with your avatar -->
-  <section class="hero">
-    <div class="container hero-inner">
+ <section class="hero">
+  <div class="container hero-inner">
 
-      <!-- Left Side: Text -->
-      <div class="hero-text">
-        <p class="eyebrow">Creative Designer</p>
+    <!-- Left Side: Text -->
+    <div class="hero-text">
+      <p class="eyebrow">CREATIVE DESIGNER</p>
 
-        <h1>
-          I design bright, playful visuals for brands and digital products.
-        </h1>
+      <h1>
+        I design clean,<br> thoughtful visuals for<br>
+        brands & digital products.
+      </h1>
 
-        <p class="hero-subtitle">
-          Blending <strong>UI design, illustration, and branding</strong> to create fun, friendly, and intentional experiences.
-        </p>
+      <p class="hero-subtitle">
+        Specializing in <strong>UI design, mobile interfaces, branding,</strong> and playful visuals.
+      </p>
 
-        <div class="hero-links">
-          <a href="#work">See my work</a>
-          <a href="#contact">Contact me</a>
-        </div>
+      <div class="hero-links">
+        <a href="#work">See my work</a>
+        <a href="#contact">Contact me</a>
       </div>
-
-      <!-- Right Side: Your avatar image -->
-      <div class="hero-visual">
-        <img
-          src="Avatar_Juju.png"
-          alt="Avatar illustration of Julia Alix sitting on a moon, waving while using a laptop."
-        />
-      </div>
-
     </div>
-  </section>
+
+    <!-- Right Side: Avatar Image -->
+    <div class="hero-visual">
+      <img
+        src="Avatar_Juju.png"
+        alt="Avatar illustration of Julia Alix sitting on a crescent moon, waving while using a laptop."
+        style="width:100%; border-radius:24px;"
+      />
+    </div>
+
+  </div>
+</section>
+
 
   <!-- Selected Work -->
   <section id="work" class="section">
