--- a/index.html
+++ b/index.html
@@ -25,65 +25,88 @@
     </div>
   </header>
 
-  <!-- Hero Section with your avatar -->
- <section class="hero">
-  <div class="container hero-inner">
+  <!-- Hero Section with avatar -->
+  <section class="hero">
+    <div class="container hero-inner">
 
-    <!-- Left Side: Text -->
-    <div class="hero-text">
-      <p class="eyebrow">CREATIVE DESIGNER</p>
+      <!-- Left Side: Text -->
+      <div class="hero-text">
+        <p class="eyebrow">Creative Designer</p>
 
-      <h1>
-        I design clean,<br> thoughtful visuals for<br>
-        brands & digital products.
-      </h1>
+        <h1>
+          I design clean, thoughtful visuals for brands & digital products.
+        </h1>
 
-      <p class="hero-subtitle">
-        Specializing in <strong>UI design, mobile interfaces, branding,</strong> and playful visuals.
-      </p>
+        <p class="hero-subtitle">
+          Blending <strong>UI design, illustration, and branding</strong> to create fun, friendly, and intentional experiences.
+        </p>
 
-      <div class="hero-links">
-        <a href="#work">See my work</a>
-        <a href="#contact">Contact me</a>
+        <div class="hero-links">
+          <a href="#work">See my work</a>
+          <a href="#contact">Contact me</a>
+        </div>
       </div>
+
+      <!-- Right Side: Avatar Image -->
+      <div class="hero-visual">
+        <img
+          src="Avatar_Juju.png"
+          alt="Avatar illustration of Julia Alix sitting on a crescent moon, waving while using a laptop."
+        />
+      </div>
+
     </div>
-
-    <!-- Right Side: Avatar Image -->
-    <div class="hero-visual">
-      <img
-        src="Avatar_Juju.png"
-        alt="Avatar illustration of Julia Alix sitting on a crescent moon, waving while using a laptop."
-        style="width:100%; border-radius:24px;"
-      />
-    </div>
-
-  </div>
-</section>
-
+  </section>
 
   <!-- Selected Work -->
   <section id="work" class="section">
     <div class="container">
       <h2>Selected Work</h2>
+      <p>A few of the projects I’ve been working on recently.</p>
 
       <div class="grid">
 
+        <!-- BusyBee – main UI project -->
         <article class="project">
-          <h3>Project Title 01</h3>
-          <p>Short description of the project + your role.</p>
-          <p class="tags">UI Design • Mobile</p>
+          <img
+            src="Busybee_Cover.png"
+            alt="BusyBee productivity app cover – yellow screen with bees and title"
+          />
+
+          <h3>BusyBee – Productivity App</h3>
+          <p>
+            A bright, bee-themed productivity app that helps users organize tasks,
+            manage time efficiently, and stay focused through a clean, friendly UI.
+          </p>
+
+          <p class="tags">UI Design • Mobile App • Prototype</p>
+
+          <a
+            class="btn-pill"
+            href="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
+            target="_blank"
+          >
+            View prototype →
+          </a>
+        </article>
+
+        <!-- Placeholder projects you can replace later -->
+        <article class="project">
+          <h3>UI Project 02</h3>
+          <p>
+            Another interface project you’d like to highlight. You can replace this with
+            a Figma shot or case study later.
+          </p>
+          <p class="tags">UI Design • Coming soon</p>
         </article>
 
         <article class="project">
-          <h3>Project Title 02</h3>
-          <p>Short description of the project + your role.</p>
-          <p class="tags">Branding • Visual Design</p>
-        </article>
-
-        <article class="project">
-          <h3>Project Title 03</h3>
-          <p>Short description of the project + your role.</p>
-          <p class="tags">Web Design • UI/UX</p>
+          <h3>Branding / Graphic Project</h3>
+          <p>
+            Space reserved for a branding or graphic design project to keep your three
+            categories represented.
+          </p>
+          <p class="tags">Branding • Graphic Design • Coming soon</p>
         </article>
 
       </div>
@@ -95,10 +118,12 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        Hi! I’m Julia Alix — a creative designer who loves crafting bright, characterful visuals and soft, friendly interfaces.
+        Hi! I’m Julia Alix — a creative designer who loves crafting bright, characterful visuals
+        and soft, friendly interfaces.
       </p>
       <p>
-        My work combines illustration, UI design, and clean branding to help products feel more human and joyful.
+        My work combines illustration, UI design, and clean branding to help products feel
+        more human and joyful.
       </p>
     </div>
   </section>
