--- a/index.html
+++ b/index.html
@@ -60,58 +60,63 @@
 
   <!-- Selected Work -->
   <section id="work" class="section">
-    <div class="container">
-      <h2>Selected Work</h2>
-      <p>A few of the projects I’ve been working on recently.</p>
+  <div class="container">
+    <h2>Selected Work</h2>
+    <p>A few of the projects I’ve been working on recently.</p>
 
-      <div class="grid">
+    <div class="grid">
 
-        <!-- BusyBee – main UI project -->
-        <article class="project">
-          <img
-            src="Busybee_Cover.png"
-            alt="BusyBee productivity app cover – yellow screen with bees and title"
-          />
+      <!-- BusyBee – main UI project -->
+      <article class="project">
+        <img
+          src="Busybee_Cover.png"
+          alt="BusyBee productivity app cover – yellow screen with bees and title"
+          style="width:100%; border-radius:20px; margin-bottom:12px;"
+        />
 
-          <h3>BusyBee – Productivity App</h3>
-          <p>
-            A bright, bee-themed productivity app that helps users organize tasks,
-            manage time efficiently, and stay focused through a clean, friendly UI.
-          </p>
+        <h3>BusyBee – Productivity App</h3>
+        <p>
+          A bright, bee-themed productivity app that helps users organize tasks,
+          manage time efficiently, and stay focused through a clean, friendly UI.
+        </p>
 
-          <p class="tags">UI Design • Mobile App • Prototype</p>
+        <p class="tags">UI Design • Mobile App • Prototype</p>
 
-          <a
-            class="btn-pill"
-            href="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
-            target="_blank"
-          >
-            View prototype →
-          </a>
-        </article>
+        <a
+          href="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
+          target="_blank"
+          style="
+            display:inline-block;
+            margin-top:10px;
+            padding:0.6rem 1rem;
+            border-radius:999px;
+            background:linear-gradient(135deg,#ff9a8b,#ff6f91);
+            color:#fff;
+            font-size:0.85rem;
+            box-shadow:0 10px 25px rgba(255,111,145,0.3);
+          "
+        >
+          View prototype →
+        </a>
+      </article>
 
-        <!-- Placeholder projects you can replace later -->
-        <article class="project">
-          <h3>UI Project 02</h3>
-          <p>
-            Another interface project you’d like to highlight. You can replace this with
-            a Figma shot or case study later.
-          </p>
-          <p class="tags">UI Design • Coming soon</p>
-        </article>
+      <!-- Placeholder projects for later -->
+      <article class="project">
+        <h3>UI Project 02</h3>
+        <p>Another interface project you’d like to highlight. You can replace this later.</p>
+        <p class="tags">UI Design • Coming soon</p>
+      </article>
 
-        <article class="project">
-          <h3>Branding / Graphic Project</h3>
-          <p>
-            Space reserved for a branding or graphic design project to keep your three
-            categories represented.
-          </p>
-          <p class="tags">Branding • Graphic Design • Coming soon</p>
-        </article>
+      <article class="project">
+        <h3>Branding / Graphic Project</h3>
+        <p>Space for a branding or graphic design project so your other categories can live here.</p>
+        <p class="tags">Branding • Graphic Design • Coming soon</p>
+      </article>
 
-      </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- About -->
   <section id="about" class="section">
