--- a/index.html
+++ b/index.html
@@ -99,14 +99,33 @@
           View prototype →
         </a>
       </article>
+      
+    <!-- DigiBot – UI/Branding Project -->
+<article class="project">
+  <img
+    src="Digibot_Cover.png"
+    alt="Digibot Application – Cover Design"
+    style="width:100%; border-radius:20px; margin-bottom:12px;"
+  />
+
+  <h3>DigiBot – Application</h3>
+  <p>
+    A vibrant design and branding concept focused on digital creativity,
+    collaboration, and user-friendly tools wrapped in a fun visual identity.
+  </p>
+
+  <p class="tags">UI Design • Branding • Web App</p>
+
+  <a
+    class="btn-pill"
+    href="https://white-clock-43979981.figma.site/"
+    target="_blank"
+  >
+    View prototype →
+  </a>
+</article>
 
       <!-- Placeholder projects for later -->
-      <article class="project">
-        <h3>UI Project 02</h3>
-        <p>Another interface project you’d like to highlight. You can replace this later.</p>
-        <p class="tags">UI Design • Coming soon</p>
-      </article>
-
       <article class="project">
         <h3>Branding / Graphic Project</h3>
         <p>Space for a branding or graphic design project so your other categories can live here.</p>
