--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div class="grid">
 
-      <!-- BusyBee – main UI project -->
+      <!-- BusyBee – Productivity App -->
       <article class="project">
         <img
           src="Busybee_Cover.png"
@@ -83,53 +83,62 @@
         <p class="tags">UI Design • Mobile App • Prototype</p>
 
         <a
+          class="btn-pill"
           href="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
           target="_blank"
-          style="
-            display:inline-block;
-            margin-top:10px;
-            padding:0.6rem 1rem;
-            border-radius:999px;
-            background:linear-gradient(135deg,#ff9a8b,#ff6f91);
-            color:#fff;
-            font-size:0.85rem;
-            box-shadow:0 10px 25px rgba(255,111,145,0.3);
-          "
         >
           View prototype →
         </a>
       </article>
-      
-    <!-- DigiBot – UI/Branding Project -->
-<article class="project">
-  <img
-    src="Digibot_Cover.png"
-    alt="Digibot Application – Cover Design"
-    style="width:100%; border-radius:20px; margin-bottom:12px;"
-  />
 
-  <h3>DigiBot – Application</h3>
-  <p>
-    A vibrant design and branding concept focused on digital creativity,
-    collaboration, and user-friendly tools wrapped in a fun visual identity.
-  </p>
-
-  <p class="tags">UI Design • Branding • Web App</p>
-
-  <a
-    class="btn-pill"
-    href="https://white-clock-43979981.figma.site/"
-    target="_blank"
-  >
-    View prototype →
-  </a>
-</article>
-
-      <!-- Placeholder projects for later -->
+      <!-- DigiBot – Application -->
       <article class="project">
-        <h3>Branding / Graphic Project</h3>
-        <p>Space for a branding or graphic design project so your other categories can live here.</p>
-        <p class="tags">Branding • Graphic Design • Coming soon</p>
+        <img
+          src="Digibot_Cover.png"
+          alt="Digibot application cover – two people collaborating at a desk"
+          style="width:100%; border-radius:20px; margin-bottom:12px;"
+        />
+
+        <h3>DigiBot – Application</h3>
+        <p>
+          A vibrant concept focused on digital creativity and collaboration,
+          with a bold color palette and playful illustration-led UI.
+        </p>
+
+        <p class="tags">UI Design • Branding • Web App</p>
+
+        <a
+          class="btn-pill"
+          href="https://white-clock-43979981.figma.site/"
+          target="_blank"
+        >
+          View prototype →
+        </a>
+      </article>
+
+      <!-- UnaMarket – Seller’s Landing Page -->
+      <article class="project">
+        <img
+          src="Unamarket_cover.png"
+          alt="UnaMarket seller's landing page cover – logo and illustration of a seller at a laptop"
+          style="width:100%; border-radius:20px; margin-bottom:12px;"
+        />
+
+        <h3>UnaMarket – Seller’s Landing Page</h3>
+        <p>
+          A clean, friendly marketplace landing page designed for sellers,
+          focusing on clarity, trust, and simple onboarding.
+        </p>
+
+        <p class="tags">UI Design • Web • Landing Page</p>
+
+        <a
+          class="btn-pill"
+          href="https://www.figma.com/design/tCuHF4MFzFo8OMYBUVQLX2/Seller-landing-Page?node-id=0-1"
+          target="_blank"
+        >
+          View design →
+        </a>
       </article>
 
     </div>
