--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <!-- Left Side: Text -->
       <div class="hero-text">
-        <p class="eyebrow">Creative Designer</p>
+        <p class="eyebrow">Senior Designer</p>
 
         <h1>
           I design clean, thoughtful visuals for brands & digital products.
