--- a/index.html
+++ b/index.html
@@ -177,13 +177,35 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer">
+   <footer class="footer">
     <p>© <span id="year"></span> Julia Alix. All rights reserved.</p>
   </footer>
 
   <script>
+    // Set current year
     document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Scroll animation for project cards
+    const cards = document.querySelectorAll(".project");
+
+    const observer = new IntersectionObserver(
+      (entries, obs) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add("in-view");
+            obs.unobserve(entry.target);
+          }
+        });
+      },
+      { threshold: 0.2 }
+    );
+
+    cards.forEach((card) => observer.observe(card));
   </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
