--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        Hi! I’m Julia Alix — a creative designer who loves crafting bright, characterful visuals
-        and soft, friendly interfaces.
+       I’m a Senior Designer with eight years of experience, but my love for art started way before that. 
+        Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.
       </p>
-      <p>
-        My work combines illustration, UI design, and clean branding to help products feel
-        more human and joyful.
+      <p>I’ve always enjoyed exploring different corners of this industry, learning and adapting as everything evolves. 
+        And honestly, what makes me happiest is creating designs that feel clear and easy for people to use—work
+        that makes them smile because they instantly get what they’re looking at or what they need to do.
       </p>
     </div>
   </section>
@@ -164,7 +164,7 @@
   <!-- Contact -->
   <section id="contact" class="section">
     <div class="container">
-      <h2>Let’s work together</h2>
+      <h2>Let’s work together!</h2>
       <p>Open to freelance projects, collaborations, and full-time design opportunities.</p>
 
       <ul class="links-list">
@@ -177,7 +177,7 @@
   </section>
 
     <footer class="footer">
-    <p>© <span id="year"></span> Julia Alix. All rights reserved.</p>
+    <p>© <span id="year"></span> Julia Jasmin Alix. All rights reserved.</p>
   </footer>
 
   <script>
