--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="eyebrow">Senior Designer</p>
 
         <h1>
-          I design clean, thoughtful visuals for brands & digital products.
+          Crafting interfaces, brands, and visuals with purpose. For me, great design goes beyond aesthetics—it’s something people connect with.
         </h1>
 
         <p class="hero-subtitle">
