--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <p class="eyebrow">Senior Designer</p>
 
         <h1>
-          Crafting interfaces, brands, and visuals with purpose. For me, great design goes beyond aesthetics—it’s something people connect with.
+          Crafting UI Design, branding, and visuals to create fun, friendly and intentional experiences. 
         </h1>
 
         <p class="hero-subtitle">
-          Blending <strong>UI design, illustration, and branding</strong> to create fun, friendly, and intentional experiences.
+          Great design goes beyond aesthetics—it’s something people connect with.
         </p>
 
         <div class="hero-links">
