--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="eyebrow">Senior Designer</p>
 
         <h1>
-          Crafting UI Design, branding, and visuals to create fun, friendly and intentional experiences. 
+          Crafting UI Design, Branding, and Visuals to create fun, friendly and intentional experiences. 
         </h1>
 
         <p class="hero-subtitle">
