--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
       <h2>Hey there!</h2>
       <p>
        <h3><b>I’m Julia! </b></h3>
-        Im currently a Senior Designer with eight years of experience, I worked with international clients under different industries from both Print and Digital Design.
+        Im currently a Senior Designer with eight years of experience, I have a good track record working with international clients under different industries like Print, Digital Design and, Web design.
         Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.
       </p>
-      <p>I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. 
+      <p>I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. Right now Im into Frontend development.
         And honestly, what makes me happiest is creating designs that feel clear and easy for people to use—work
         that makes them not notice the process they are in because they instantly get what they’re looking at or what they need to do.
       </p>
