--- a/index.html
+++ b/index.html
@@ -66,30 +66,24 @@
 
     <div class="grid">
 
-      <!-- BusyBee – Productivity App -->
-      <article class="project">
-        <img
-          src="Busybee_Cover.png"
-          alt="BusyBee productivity app cover – yellow screen with bees and title"
-          style="width:100%; border-radius:20px; margin-bottom:12px;"
-        />
+    <!-- BusyBee – Productivity App -->
+<article class="project">
+  <img src="Busybee_Cover.png" alt="BusyBee productivity app cover" />
 
-        <h3>BusyBee – Productivity App</h3>
-        <p>
-          A bright, bee-themed productivity app that helps users organize tasks,
-          manage time efficiently, and stay focused through a clean, friendly UI.
-        </p>
+  <h3>BusyBee – Productivity App</h3>
+  <p>
+    A bright, bee-themed productivity app that helps users organize tasks,
+    manage time efficiently, and stay focused through a clean, friendly UI.
+  </p>
 
-        <p class="tags">UI Design • Mobile App • Prototype</p>
+  <p class="tags">UI Design • Mobile App • Prototype</p>
 
-        <a
-          class="btn-pill"
-          href="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
-          target="_blank"
-        >
-          View prototype →
-        </a>
-      </article>
+  <!-- change href to busybee.html -->
+  <a class="btn-pill" href="busybee.html">
+    View case study →
+  </a>
+</article>
+
 
       <!-- DigiBot – Application -->
       <article class="project">
