--- a/index.html
+++ b/index.html
@@ -101,13 +101,7 @@
 
         <p class="tags">UI Design • Branding • Web App</p>
 
-        <a
-          class="btn-pill"
-          href="https://white-clock-43979981.figma.site/"
-          target="_blank"
-        >
-          View prototype →
-        </a>
+       <a class="btn-pill" href="digibot.html">View case study →</a>
       </article>
 
       <!-- UnaMarket – Seller’s Landing Page -->
@@ -126,13 +120,7 @@
 
         <p class="tags">UI Design • Web • Landing Page</p>
 
-        <a
-          class="btn-pill"
-          href="https://www.figma.com/design/tCuHF4MFzFo8OMYBUVQLX2/Seller-landing-Page?node-id=0-1"
-          target="_blank"
-        >
-          View design →
-        </a>
+       <a class="btn-pill" href="unamarket.html">View case study →</a>
       </article>
 
     </div>
