--- a/busybee.html
+++ b/busybee.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <!-- Same header as home -->
+  <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
       <div class="logo">
@@ -23,15 +23,18 @@
     </div>
   </header>
 
-  <!-- Project hero -->
+  <!-- Project Section -->
   <section class="section">
     <div class="container">
       <h2>BusyBee – Productivity App</h2>
       <p class="tags">UI Design • Mobile App • Prototype</p>
 
-      <img src="Busybee_Cover.png"
-           alt="BusyBee productivity app cover"
-           style="margin-top:1rem; border-radius:24px; max-width:720px;">
+      <!-- Cover image -->
+      <img
+        src="Busybee_Cover.png"
+        alt="BusyBee productivity app cover"
+        style="margin-top:1rem; border-radius:24px; max-width:720px;"
+      />
 
       <div style="margin-top:1.5rem; max-width:720px;">
         <h3>Overview</h3>
@@ -51,6 +54,48 @@
           <li>Make task management feel light instead of overwhelming.</li>
           <li>Use a strong, memorable color system to support the “bee” concept.</li>
         </ul>
+
+        <h3>Key Decisions</h3>
+        <ul>
+          <li>
+            Used a bold yellow base with strong contrast to make tasks and actions easy to scan.
+          </li>
+          <li>
+            Rounded shapes and soft shadows to keep the experience approachable and less “corporate”.
+          </li>
+          <li>
+            Clear typography hierarchy so priorities, deadlines, and next actions stand out at a glance.
+          </li>
+        </ul>
+
+        <h3>Process</h3>
+        <ol>
+          <li>
+            <strong>Understanding the problem</strong> – I listed common pain points around task
+            management (forgetting deadlines, feeling overwhelmed, scattered notes) and turned
+            them into simple user needs.
+          </li>
+          <li>
+            <strong>Exploring concepts</strong> – I explored several metaphors for productivity and
+            landed on the “bee” theme to represent focus, movement, and small tasks adding up.
+          </li>
+          <li>
+            <strong>User flows & structure</strong> – I mapped a simple flow for creating tasks,
+            viewing today’s priorities, and checking progress so the app feels light to use daily.
+          </li>
+          <li>
+            <strong>Wireframes</strong> – I sketched low-fidelity layouts to decide where lists,
+            filters, and calls to action should live before adding visuals.
+          </li>
+          <li>
+            <strong>Visual design</strong> – I refined colors, typography, and iconography to keep
+            the interface readable while still feeling playful and branded.
+          </li>
+          <li>
+            <strong>Prototype</strong> – Finally, I built an interactive prototype in Figma to
+            test key interactions like creating tasks, switching views, and checking progress.
+          </li>
+        </ol>
       </div>
 
       <!-- Figma embed -->
