--- a/busybee.html
+++ b/busybee.html
@@ -68,35 +68,64 @@
           </li>
         </ul>
 
-        <h3>Process</h3>
-        <ol>
-          <li>
-            <strong>Understanding the problem</strong> – I listed common pain points around task
-            management (forgetting deadlines, feeling overwhelmed, scattered notes) and turned
-            them into simple user needs.
-          </li>
-          <li>
-            <strong>Exploring concepts</strong> – I explored several metaphors for productivity and
-            landed on the “bee” theme to represent focus, movement, and small tasks adding up.
-          </li>
-          <li>
-            <strong>User flows & structure</strong> – I mapped a simple flow for creating tasks,
-            viewing today’s priorities, and checking progress so the app feels light to use daily.
-          </li>
-          <li>
-            <strong>Wireframes</strong> – I sketched low-fidelity layouts to decide where lists,
-            filters, and calls to action should live before adding visuals.
-          </li>
-          <li>
-            <strong>Visual design</strong> – I refined colors, typography, and iconography to keep
-            the interface readable while still feeling playful and branded.
-          </li>
-          <li>
-            <strong>Prototype</strong> – Finally, I built an interactive prototype in Figma to
-            test key interactions like creating tasks, switching views, and checking progress.
-          </li>
-        </ol>
-      </div>
+                <h3>Process</h3>
+
+        <div class="process-grid">
+          <div class="process-step">
+            <div class="process-icon">🧠</div>
+            <h4>Understand the problem</h4>
+            <p>
+              I listed common pain points around task management (forgetting deadlines,
+              feeling overwhelmed, scattered notes) and turned them into simple user needs.
+            </p>
+          </div>
+
+          <div class="process-step">
+            <div class="process-icon">💡</div>
+            <h4>Explore concepts</h4>
+            <p>
+              I explored different metaphors for productivity and landed on the “bee” theme
+              to represent focus, movement, and small tasks adding up.
+            </p>
+          </div>
+
+          <div class="process-step">
+            <div class="process-icon">🧩</div>
+            <h4>Map flows & structure</h4>
+            <p>
+              I mapped a simple flow for creating tasks, viewing today’s priorities, and
+              checking progress so the app feels light to use every day.
+            </p>
+          </div>
+
+          <div class="process-step">
+            <div class="process-icon">✏️</div>
+            <h4>Wireframe the screens</h4>
+            <p>
+              I sketched low-fidelity layouts to decide where lists, filters, and calls to
+              action should live before committing to the final visuals.
+            </p>
+          </div>
+
+          <div class="process-step">
+            <div class="process-icon">🎨</div>
+            <h4>Refine visual design</h4>
+            <p>
+              I defined colors, typography, and iconography to keep the interface readable
+              while still feeling playful and on-brand for BusyBee.
+            </p>
+          </div>
+
+          <div class="process-step">
+            <div class="process-icon">📱</div>
+            <h4>Build the prototype</h4>
+            <p>
+              I created an interactive Figma prototype to test key flows like creating tasks,
+              switching views, and checking progress on the go.
+            </p>
+          </div>
+        </div>
+
 
       <!-- Figma embed -->
       <div style="margin-top:2rem; max-width:900px;">
